--- a/src/assets/sass/App.scss
+++ b/src/assets/sass/App.scss
@@ -1,32 +1,13 @@
-.App {
-  text-align: center;
-}
+@import 'Card';
+@import 'Input';
+@import 'variables';
 
-.App-logo {
-  animation: App-logo-spin infinite 20s linear;
-  height: 40vmin;
-}
-
-.App-header {
-  background-color: #282c34;
+.container-parent {
+  // background-image: linear-gradient(310deg, #eef1f6, #fcfdfd);
+  // background-image: linear-gradient(108deg, #8468f5, #eb74e7 99%, #ec74e7);
+  background-image: url('/src//assets/images/background-home.png');
   min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: center;
 }
