--- a/src/index.scss
+++ b/src/index.scss
@@ -1,7 +1,10 @@
+@import "../node_modules/bulma/bulma.sass";
+@import "./assets/sass/App.scss";
+
 body {
   margin: 0;
   padding: 0;
-  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
+  font-family: 'Averta', -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
     "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
     sans-serif;
   -webkit-font-smoothing: antialiased;
@@ -11,4 +14,42 @@ body {
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
     monospace;
+}
+
+@font-face {
+  font-family: 'Averta';
+  src: url('./assets/fonts/Averta/AvertaDemoPE-Regular.eot');
+  /* IE9 Compat Modes */
+  src: local('Open Sans'), local('OpenSans'),
+    url('./assets/fonts/Averta/AvertaDemoPE-Regular.eot?#iefix') format('embedded-opentype'),
+    /* IE6-IE8 */
+    url('./assets/fonts/Averta/AvertaDemoPE-Regular.woff2') format('woff2'),
+    /* Super Modern Browsers */
+    url('./assets/fonts/Averta/AvertaDemoPE-Regular.woff') format('woff'),
+    /* Modern Browsers */
+    url('./assets/fonts/Averta/AvertaDemoPE-Regular.ttf') format('truetype'),
+    /* Safari, Android, iOS */
+
+}
+
+@font-face {
+  font-family: 'Averta Bold';
+  src: url('./assets/fonts/Averta/AvertaDemoPE-ExtraboldItalic.eot');
+  /* IE9 Compat Modes */
+  src: local('Open Sans'), local('OpenSans'),
+    url('./assets/fonts/Averta/AvertaDemoPE-ExtraboldItalic.eot?#iefix') format('embedded-opentype'),
+    /* IE6-IE8 */
+    url('./assets/fonts/Averta/AvertaDemoPE-ExtraboldItalic.woff2') format('woff2'),
+    /* Super Modern Browsers */
+    url('./assets/fonts/Averta/AvertaDemoPE-ExtraboldItalic.woff') format('woff'),
+    /* Modern Browsers */
+    url('./assets/fonts/Averta/AvertaDemoPE-ExtraboldItalic.ttf') format('truetype');
+  /* Safari, Android, iOS */
+}
+
+.navbar {
+  &.is-transparent {
+    background-color: transparent;
+    background-image: none;
+  }
 }
