--- a/src/assets/sass/App.scss
+++ b/src/assets/sass/App.scss
@@ -5,9 +5,10 @@
 .container-parent {
   // background-image: linear-gradient(310deg, #eef1f6, #fcfdfd);
   // background-image: linear-gradient(108deg, #8468f5, #eb74e7 99%, #ec74e7);
-  background-image: url('/src//assets/images/background-home.png');
+  background-image: url('/src/assets/images/background-home.png');
   min-height: 100vh;
+  background-position: center center;
   background-repeat: no-repeat;
+  background-attachment: fixed;
   background-size: cover;
-  background-position: center;
 }
