--- a/src/assets/sass/Card.scss
+++ b/src/assets/sass/Card.scss
@@ -1,6 +1,7 @@
-.card {
+.card-custom {
   border-radius: 11px;
-  background-color: #ffffff;
+  background-color: #fff;
   box-shadow: -10px 10px 20px 0 rgba(30, 30, 30, 0.05);
   height: 100%;
+  overflow: hidden;
 }
