--- a/src/pages/Home/Home.scss
+++ b/src/pages/Home/Home.scss
@@ -1,13 +1,9 @@
-@import './../../assets/sass/Card';
-
 .container-parent {
-  // background-image: linear-gradient(310deg, #eef1f6, #fcfdfd);
-  // background-image: linear-gradient(108deg, #8468f5, #eb74e7 99%, #ec74e7);
-  background-image: url('../../assets/images/background-home.png');
-  min-height: 100vh;
+  background: url('../../assets/images/background-home.png') no-repeat center center fixed;
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
+  background-size: cover;
+  height: 100%;
+  overflow: hidden;
 }
-
-// .columns:last-child {
-//   margin-bottom: 0;
-// }
-
