--- a/src/index.scss
+++ b/src/index.scss
@@ -9,6 +9,7 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  background-image: linear-gradient(310deg, #eef1f6, #fcfdfd);
 }
 
 code {
@@ -47,9 +48,16 @@ code {
   /* Safari, Android, iOS */
 }
 
-.navbar {
-  &.is-transparent {
-    background-color: transparent;
-    background-image: none;
-  }
-}
+// .navbar {
+//   &.is-transparent {
+//     background-color: transparent;
+//     background-image: none;
+//   }
+// }
+
+// .container-parent {
+//   background-image: url('./assets/images/background-home.png');
+//   // min-height: 100vh;
+//   background-size: 100% 100%;
+//   background-repeat: no-repeat;
+// }
