--- a/src/index.scss
+++ b/src/index.scss
@@ -9,6 +9,9 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+}
+
+html {
   background-image: linear-gradient(310deg, #eef1f6, #fcfdfd);
 }
 
